--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <section class="main-section">
         <h1>About Me</h1>
 
-        <img src="assets/images/pic.jpg" class="auth-image" alt="Your Name">
+        <img src="assets/images/pic.JPG" class="auth-image" alt="Your Name">
 
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat voluptatibus, labore non eveniet minus inventore, incidunt, magni voluptas similique quasi voluptatum est ipsam qui natus ullam accusamus laborum! Distinctio, qui.</p>
 
