--- a/portfolio.html
+++ b/portfolio.html
@@ -28,9 +28,9 @@
         <h1>Portfolio</h1>
 
         <div class="work">
-          <img src="assets/images/1.jpg" alt="hangman">
+          <img src="assets/images/1.jpg" alt="psychic">
 
-          <h3>Hangman</h3>
+          <a href="https://eomar1122.github.io/Psychic-Game/"><h3>Psychic</h3></a>
         </div>
         <div class="work">
           <img src="assets/images/2.jpg" alt="RPG Game">
