--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
         <div class="work">
           <img src="assets/images/2.jpg" alt="Crystal Game">
 
-          <a href="https://eomar1122.github.io/week-4-game/"><h3>Crystal Game</h3>
+          <a href="https://eomar1122.github.io/week-4-game/"><h3>Crystal</h3>
         </div>
         <div class="work">
           <img src="assets/images/3.jpg" alt="Trivia Game">
