Add a link to crystals game

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,14 +28,14 @@
         <h1>Portfolio</h1>
 
         <div class="work">
-          <img src="assets/images/1.jpg" alt="hangman">
+          <img src="assets/images/1.jpg" alt="psychic">
 
-          <h3>Hangman</h3>
+          <a href="https://eomar1122.github.io/Psychic-Game/"><h3>Psychic</h3></a>
         </div>
         <div class="work">
           <img src="assets/images/2.jpg" alt="RPG Game">
 
-          <h3>RPG Game</h3>
+          <a href="https://eomar1122.github.io/week-4-game/"><h3>Crystal Game</h3></a>
         </div>
         <div class="work">
           <img src="assets/images/3.jpg" alt="Trivia Game">
