Add a link to crystals game

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,12 +30,12 @@
         <div class="work">
           <img src="assets/images/1.jpg" alt="psychic">
 
-          <a href="https://eomar1122.github.io/Psychic-Game/"><h3>Psychic</h3></a>
+          <a href="https://eomar1122.github.io/Psychic-Game/" alt="_blank"><h3>Psychic</h3></a>
         </div>
         <div class="work">
           <img src="assets/images/2.jpg" alt="RPG Game">
 
-          <a href="https://eomar1122.github.io/week-4-game/"><h3>Crystal Game</h3></a>
+          <a href="https://eomar1122.github.io/week-4-game/" alt="_blank"><h3>Crystal Game</h3></a>
         </div>
         <div class="work">
           <img src="assets/images/3.jpg" alt="Trivia Game">
