--- a/portfolio.html
+++ b/portfolio.html
@@ -33,9 +33,9 @@
           <a href="https://eomar1122.github.io/Psychic-Game/" alt="_blank"><h3>Psychic</h3></a>
         </div>
         <div class="work">
-          <img src="assets/images/2.jpg" alt="Crystal Game">
+          <img src="assets/images/2.jpg" alt="RPG Game">
 
-          <a href="https://eomar1122.github.io/week-4-game/" alt="_blank"<h3>Crystal</h3>
+          <a href="https://eomar1122.github.io/week-4-game/" alt="_blank"><h3>Crystal Game</h3></a>
         </div>
         <div class="work">
           <img src="assets/images/3.jpg" alt="Trivia Game">
