--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
         <div class="work">
           <img src="assets/images/3.jpg" alt="Trivia Game">
 
-          <h3>Trivia Game</h3>
+          <a href="https://eomar1122.github.io/TriviaGame/" target="_blank"><h3>Trivia Game</h3></a>
         </div>
         <div class="work">
           <img src="assets/images/4.jpg" alt="Rutgers Info Widget">
