--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
         <div class="work">
           <img src="assets/images/4.jpg" alt="Rutgers Info Widget">
 
-          <h3>Rutgers Info Widget</h3>
+          <a href="https://eomar1122.github.io/GifTastic/" target="_blank"><h3>GifTastic</h3></a>
         </div>
         <div class="work">
           <img src="assets/images/5.jpg" alt="Rock Paper Scissors">
