--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
         <div class="work">
           <img src="assets/images/5.jpg" alt="Rock Paper Scissors">
 
-          <h3>Rock Paper Scissors</h3>
+          <a href="https://eomar1122.github.io/TrainScheduler/" target="_blank"><h3>Train Scheduler</h3></a>
         </div>
 
       </section>
