--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
         <div class="work">
           <img src="assets/images/2.jpg" alt="RPG Game">
 
-          <a href="https://eomar1122.github.io/week-4-game/" target="_blank"><h3>Crystal Game</h3></a>
+          <a href="https://eomar1122.github.io/Crystals-Collector-Game/" target="_blank"><h3>Crystal Game</h3></a>
         </div>
         <div class="work">
           <img src="assets/images/3.jpg" alt="Trivia Game">
