Add FriendFinder add

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,11 +35,7 @@
         <div class="work">
           <img src="assets/images/2.jpg" alt="RPG Game">
 
-<<<<<<< HEAD
           <a href="https://eomar1122.github.io/week-4-game/" target="_blank"><h3>Crystal Game</h3></a>
-=======
-          <a href="https://eomar1122.github.io/Crystals-Collector-Game/" target="_blank"><h3>Crystal Game</h3></a>
->>>>>>> 9aadc8a48d0b3e64b8699cce6bb0907ce7fd4c03
         </div>
         <div class="work">
           <img src="assets/images/3.jpg" alt="Trivia Game">
@@ -57,10 +53,11 @@
           <a href="https://eomar1122.github.io/TrainScheduler/" target="_blank"><h3>Train Scheduler</h3></a>
         </div>
         <div class="work">
-          <img src="assets/images/bg.jpg" alt="Rock Paper Scissors">
+          <img id="friend-finder-img" src="assets/images/bg.jpg" alt="Rock Paper Scissors">
 
           <a href="https://stormy-ocean-66890.herokuapp.com/" target="_blank"><h3>Friend Finder</h3></a>
         </div>
+        
 
       </section>
 
