--- a/portfolio.html
+++ b/portfolio.html
@@ -57,6 +57,11 @@
 
           <a href="https://stormy-ocean-66890.herokuapp.com/" target="_blank"><h3>Friend Finder</h3></a>
         </div>
+        <div class="work">
+          <img id="friend-finder-img" src="assets/images/cute-burger.jpg" alt="Eat Da Burgers">
+
+          <a href="https://enigmatic-spire-37736.herokuapp.com/" target="_blank"><h3>Eat Da Burgers</h3></a>
+        </div>
         
 
       </section>
