add burger app to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
         <div class="work">
           <img id="friend-finder-img" src="assets/images/cute-burger.jpg" alt="Eat Da Burgers">
 
-          <a href="https://enigmatic-spire-37736.herokuapp.com/" target="_blank"><h3>Eat Da Burgers</h3></a>
+          <a href="https://murmuring-everglades-33882.herokuapp.com/" target="_blank"><h3>Eat Da Burgers</h3></a>
         </div>
         
 
