Add bio section

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 
         <img src="assets/images/pic.JPG" class="auth-image" alt="Your Name">
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat voluptatibus, labore non eveniet minus inventore, incidunt, magni voluptas similique quasi voluptatum est ipsam qui natus ullam accusamus laborum! Distinctio, qui.</p>
-
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed velit impedit, sapiente natus voluptates amet. Recusandae deserunt provident cumque ab quam nesciunt repellat, omnis, voluptas, quos animi cupiditate, culpa labore.</p>
+        <p>Web Developer experienced in all stages of application development lifecycle with a background in Computer Science.</p>
+        <p>Developed web and desktop solutions deemed to be thought provoking and logic-oriented. Well immersed in web technologies including RESTful web services and frameworks.</p>
+        <p> Experienced in managing development teams using different software development methodologies. Combines academic and real world technical experience.</p>
 
       </section>
 
