Add bio section

--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
 
         <img src="assets/images/pic.JPG" class="auth-image" alt="Your Name">
 
-        <p>Web Developer experienced in all stages of application development lifecycle with a background in Computer Science.</p>
-        <p>Developed web and desktop solutions deemed to be thought provoking and logic-oriented. Well immersed in web technologies including RESTful web services and frameworks.</p>
-        <p> Experienced in managing development teams using different software development methodologies. Combines academic and real world technical experience.</p>
+        <p>Web Developer experienced in all stages of application development lifecycle with a background in Computer Science. Developed web and desktop solutions deemed to be thought provoking and logic-oriented. Well immersed in web technologies including RESTful web services and frameworks. Experienced in managing development teams using different software development methodologies. Combines academic and real world technical experience.</p>
 
       </section>
 
