Modify app section

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,27 +28,27 @@
         <h1>Portfolio</h1>
 
         <div class="work">
-          <img src="assets/images/1.jpg" alt="psychic">
+          <img id="friend-finder-img" src="assets/images/1.jpg" alt="psychic">
 
           <a href="https://eomar1122.github.io/Psychic-Game/" target="_blank"><h3>Psychic</h3></a>
         </div>
         <div class="work">
-          <img src="assets/images/2.jpg" alt="RPG Game">
+          <img id="friend-finder-img" src="assets/images/crystal.jpg" alt="Crystals">
 
-          <a href="https://eomar1122.github.io/week-4-game/" target="_blank"><h3>Crystal Game</h3></a>
+          <a href="https://eomar1122.github.io/Crystals-Collector-Game/" target="_blank"><h3>Crystal Game</h3></a>
         </div>
         <div class="work">
-          <img src="assets/images/3.jpg" alt="Trivia Game">
+          <img id="friend-finder-img" src="assets/images/trivia.png" alt="Trivia Game">
 
           <a href="https://eomar1122.github.io/TriviaGame/" target="_blank"><h3>Trivia Game</h3></a>
         </div>
         <div class="work">
-          <img src="assets/images/4.jpg" alt="GifTastic">
+          <img id="friend-finder-img" src="assets/images/giftastic.gif" alt="GifTastic">
 
           <a href="https://eomar1122.github.io/GifTastic/" target="_blank"><h3>GifTastic</h3></a>
         </div>
         <div class="work">
-          <img src="assets/images/5.jpg" alt="Train Scheduler">
+          <img id="friend-finder-img" src="assets/images/train.JPG" alt="Train Scheduler">
 
           <a href="https://eomar1122.github.io/TrainScheduler/" target="_blank"><h3>Train Scheduler</h3></a>
         </div>
