--- a/portfolio.html
+++ b/portfolio.html
@@ -62,6 +62,11 @@
 
           <a href="https://pacific-tor-35841.herokuapp.com/" target="_blank"><h3>Eat Da Burgers</h3></a>
         </div>
+        <div class="work">
+          <img id="friend-finder-img" src="assets/images/family-guy.jpg" alt="Clicky Game">
+
+          <a href="https://eomar1122.github.io/clicky-game/" target="_blank"><h3>Clicky Game</h3></a>
+        </div>
         
 
       </section>
