Add NYT-React App

--- a/portfolio.html
+++ b/portfolio.html
@@ -67,6 +67,11 @@
 
           <a href="https://eomar1122.github.io/clicky-game/" target="_blank"><h3>Clicky Game</h3></a>
         </div>
+        <div class="work">
+          <img id="friend-finder-img" src="assets/images/nyt.png" alt="NYT-React">
+
+          <a href="https://nyt-react-fullstack-app.herokuapp.com/" target="_blank"><h3>NYT-React</h3></a>
+        </div>
         
 
       </section>
